--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,900;1,300&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -50,10 +50,21 @@
         </div>
     </div>
     <div class="lower-middle">
-
+        <p>This is an inspiring quote, or testimonial from a customer. 
+            Maybe it's just filling up space, or maybe people will actually read it. 
+            Who knows? All I know is that it looks nice.</p>
+            <span>-Thor, God of Thunder</span>
     </div>
     <div class="bottom-container">
-
+        <div class="blue">    
+            <div class="action"><p>Call to action! It's time!</p>
+                <div class="description">Sign up for our product by clicking that button right over there!</div>
+            </div>    
+            <button class="bottom-button">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © The Odin Project 2021</p>
     </div>
 </body>
 </html>
